2002-01-27  Bradford Hovinen  <hovinen@ximian.com>

	* service-info.c (load_all_services): Accept model
	(get_services_category_entry): Accept model
	(service_info_new): Accept model
	(get_services_category_entry): Set the parent pointer

	* model-entry.c (get_model_entries): Accept model

	* mime-type-info.c (mime_type_info_new, load_all_mime_types):
	Accept model

	* mime-edit-dialog.c (store_data): Don't perform notification

	* model-entry.c (model_entry_insert_child) 
	(model_entry_remove_child): Perform notification here

	* mime-type-info.c (mime_type_info_set_category_name): Accept
	model for notification purposes
	(get_category): Ditto; notify the model that the new category has
	been created

	* mime-types-model.c (mime_types_model_iter_parent): Make the
	iterator invalid if the parent is the root node

	* mime-edit-dialog.c (collect_filename_extensions): Return NULL if
	there are no nodes in the tree at all

2002-01-26  Bradford Hovinen  <hovinen@ximian.com>

	* service-edit-dialog.c (response_cb): Free the structure if the
	user clicks cancel and this is an add dialog

	* mime-edit-dialog.c (response_cb): Free the structure if the user
	clicks cancel and this is an add dialog

	* service-info.c (load_all_services): Call
	model_entry_insert_child here
	(service_info_new): Don't call model_entry_insert_child
	(get_services_category_entry): Make this public

	* service-edit-dialog.c (store_data): Call
	model_entry_insert_child here

	* file-types-capplet.c (apply_cb): Call
	model_entry_commit_delete_list

	* model-entry.c (model_entry_remove): Implement
	(model_entry_append_to_delete_list) 
	(model_entry_commit_delete_list): Implement

	* mime-type-info.c (intersect_lists, reduce_supported_app_list) 
	(mime_category_info_find_apps): Implement
	(find_possible_supported_apps): Implement

	* mime-category-edit-dialog.c (mime_category_edit_dialog_init):
	Use mime_category_edit_widget for the dialog source
