@@ -1,5 +1,10 @@
 2002-01-27  Bradford Hovinen  <hovinen@ximian.com>
 
+	* model-entry.c (model_entry_insert_child): Set the parent field
+	(model_entry_remove_child): Reset the parent field
+	(model_entry_remove_child): Set up the path before removing the
+	entry from the list
+
 	* service-info.c (load_all_services): Accept model
 	(get_services_category_entry): Accept model
 	(service_info_new): Accept model
